# deepmirror-client

./: .gitignore  .pre-commit-config.yaml  CONTIBUTING.md  README.md  pyproject.toml  setup.sh
.circleci/: config.yml
.github/: pull_request_template.md  renovate.json
.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  pr-name.yml  publish.yml  pytest.yml  stale.yml
data/: data-cls-test.csv  data-cls.csv  data-reg-test.csv  data-reg.csv
deepmirror/: __init__.py  api.py  cli.py
notebooks/: Batch_Inference.ipynb  Batch_structure_prediction.ipynb  Boltz2.ipynb  Chai1_bond_constraints.ipynb  Classifcation.ipynb  Constrained_Predict_Structure.ipynb  HLM.ipynb  Models.ipynb  Predict_Structure.ipynb  Predict_Structure_with_refinement.ipynb  Prediction.ipynb  Regression.ipynb  UploadONNX.ipynb
tests/: conftest.py  test_login.py  test_train.py
