[project]
name = "deepmirror"
version = "0.0.11"
description = "Command line interface for the deepmirror public API"
requires-python = ">=3.11"
readme = "README.md"

authors = [{ name = "Ryan Greenhalgh", email = "ryan@deepmirror.ai" }]

maintainers = [{ name = "Ryan Greenhalgh", email = "ryan@deepmirror.ai" }]

dependencies = [
  "click>=8.3.1",                    # BSD-3
  "requests>=2.32.5",                # Apache-2.0
  "httpx==0.28.1",                   # MIT
  "pandas>=3.0.0",                   # BSD-3
  "pydantic>=2.12.5",                # MIT
  "pydantic-settings>=2.12.0",       # MIT
  "scikit-learn>=1.8.0",             # BSD-3
  "matplotlib>=3.10.8",              # PSF
  "tqdm>=4.67.3",                    # MPL-2.0
  "ipykernel>=7.2.0",                # BSD-3
  "types-requests==2.32.4.20260107", # Apache-2.0
  "py3Dmol>=2.5.4",                  # BSD-3
  "onnx>=1.20.1",                    # MIT License
  "rdkit==2025.9.4",                # BSD-3
  "strenum>=0.4.15; python_version < '3.11'",
  "pyarrow==24.0.0",               # Apache-2.0
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pre-commit>=4.5.1",
  "pylint>=4.0.4",
  "ruff>=0.15.0",
  "mypy==2.1.0",
  "types-tqdm==4.67.3.20260205",
  "pandas-stubs==3.0.0.260204",
]

[project.urls]
"Homepage" = "https://www.deepmirror.ai/"
"Repository" = "https://github.com/deepmirror/deepmirror-client"
"Documentation" = "https://github.com/deepmirror/deepmirror-client"
"Issues" = "https://github.com/deepmirror/deepmirror-client/issues"

[project.scripts]
dm = "deepmirror.cli:cli"

[build-system]
requires = ["setuptools>=81.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deepmirror"]

[tool.ruff]
line-length = 80
target-version = 'py313'

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit==4.5.1",
    "pylint>=4.0.4",
]
